<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/myrestaurants" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/foodsEditText"
        android:layout_below="@+id/appNameTextView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="73dp"
        android:layout_marginTop="82dp"
        android:layout_marginEnd="73dp"
        android:fontFamily="@font/vain"
        android:textColor="@color/black"
        android:layout_marginBottom="82dp"
        android:text="@string/intro"
        android:textSize="30sp"
        tools:ignore="UnknownIdInLayout" />

    <TextView
        android:id="@+id/appNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="45sp"
        android:fontFamily="@font/wagner" />

    <Button
        android:id="@+id/savedFoodsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="622dp"
        android:backgroundTint="@color/gold"
        android:text="@string/saved"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="553dp"
        android:backgroundTint="@color/gold"
        android:text="@string/button1"
        android:textColor="@color/white" />
</RelativeLayout>