<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/myrestaurants" />

    <TextView
        android:id="@+id/appNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/wagner"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="45sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/foodsEditText"
        android:layout_below="@+id/appNameTextView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="73dp"
        android:layout_marginTop="82dp"
        android:layout_marginEnd="73dp"
        android:layout_marginBottom="82dp"
        android:fontFamily="@font/vain"
        android:textColor="@color/black"
        android:text="@string/intro2"
        android:textSize="35sp" />


    <EditText
        android:id="@+id/foodsEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/findFoodsButton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:background="@color/white"
        android:hint="@string/hint"
        android:textColor="@color/black"
        android:padding="5dp" />

    <Button
        android:id="@+id/findFoodsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="35dp"
        android:backgroundTint="@color/gold"
        android:text="@string/button2"
        android:textAllCaps="false"
        android:textColor="@color/white" />
</RelativeLayout>