<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.FoodDetailFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/avocado">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:id="@+id/foodImageView"
            android:src="@drawable/thai"
            android:scaleType="centerCrop" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gold"
            android:paddingTop="20dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="20dp">


            <TextView
                android:id="@+id/foodNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:text="@string/foodname"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/categoryTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/foodNameTextView"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:text="@string/category"
                android:textColor="@color/black"
                android:fontFamily="@font/oswald"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/tailTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/foodNameTextView"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:text="@string/meal"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:fontFamily="@font/oswald" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/saveFoodButton"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:orientation="vertical"
                android:paddingLeft="30dp"
                android:paddingTop="20dp"
                android:paddingRight="30dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:drawablePadding="4dp"
                    android:gravity="left"
                    android:text="@string/measurements"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:fontFamily="@font/oswald" />

                <TextView
                    android:id="@+id/measurementsTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:drawableLeft="@drawable/outline_blender_white_24"
                    android:drawablePadding="4dp"
                    android:gravity="left"
                    android:text="@string/measurements"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:fontFamily="@font/oswald" />

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:drawablePadding="4dp"
                    android:gravity="left"
                    android:text="@string/ingredients"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:fontFamily="@font/oswald" />


                <TextView
                    android:id="@+id/ingredientsTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:drawableLeft="@drawable/outline_fact_check_white_24"
                    android:drawablePadding="4dp"
                    android:gravity="left"
                    android:text="@string/ingredients"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:fontFamily="@font/oswald" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:drawablePadding="4dp"
                    android:gravity="left"
                    android:text="@string/instructions"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:fontFamily="@font/oswald" />


                <TextView
                    android:id="@+id/instructionsTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:drawableLeft="@drawable/outline_integration_instructions_white_24"
                    android:drawablePadding="4dp"
                    android:gravity="left"
                    android:text="@string/instructions"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:fontFamily="@font/oswald" />


            </LinearLayout>

            <Button
                android:id="@+id/saveFoodButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:backgroundTint="@color/gold"
                android:text="@string/savie"
                android:textColor="@color/white"
                android:textSize="15sp" />
        </RelativeLayout>
    </LinearLayout>
</FrameLayout>